[MOD]앱 심사 전 디자인 수정

--- a/iosProco/iosProco/Resources/Base.lproj/Info.plist
+++ b/iosProco/iosProco/Resources/Base.lproj/Info.plist
@@ -2,15 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIAppFonts</key>
-	<array>
-		<string>TmoneyRoundWindExtraBold.otf</string>
-		<string>Nanum_bold.ttf</string>
-		<string>Nanum_extra_bold.ttf</string>
-		<string>Nanum_regular.ttf</string>
-		<string>Nanum-light.ttf</string>
-		<string>TmoneyRoundWindRegular.otf</string>
-	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -47,9 +38,7 @@
 			<key>CFBundleURLName</key>
 			<string></string>
 			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>kakao1aba7c49f02612303b52c65bee6a4f31</string>
-			</array>
+			<array/>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
@@ -78,6 +67,15 @@
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>YES</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>TmoneyRoundWindExtraBold.otf</string>
+		<string>Nanum_bold.ttf</string>
+		<string>Nanum_extra_bold.ttf</string>
+		<string>Nanum_regular.ttf</string>
+		<string>Nanum-light.ttf</string>
+		<string>TmoneyRoundWindRegular.otf</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -98,8 +96,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
@@ -108,5 +104,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 </dict>
 </plist>
